src/test/resources/vpc/private-subnet-green-test.json
{
     "AWSTemplateFormatVersion": "2010-09-09",
     "Description": "Creates one public subnet per availability zone.",
     "Resources": {
          "GreenPrivateUsEast1a": {
               "Type": "AWS::EC2::Subnet",
               "Properties": {
                    "MapPublicIpOnLaunch": false,
                    "VpcId": {"Fn::ImportValue": {"Fn::Join": [
                         "-",
                         [
                              {"Ref": "AWS::Region"},
                              "synapse-dev-vpc-2",
                              "VPCId"
                         ]
                    ]}},
                    "CidrBlock": "10.24.32.0/24",
                    "AvailabilityZone": "us-east-1a",
                    "Tags": [
                         {
                              "Key": "Application",
                              "Value": {"Ref": "AWS::StackName"}
                         },
                         {
                              "Key": "Name",
                              "Value": "GreenPrivateUsEast1a"
                         }
                    ]
               }
          },
          "GreenPrivateUsEast1aRouteTable": {
               "Type": "AWS::EC2::RouteTable",
               "Properties": {
                    "VpcId": {"Fn::ImportValue": {"Fn::Join": [
                         "-",
                         [
                              {"Ref": "AWS::Region"},
                              "synapse-dev-vpc-2",
                              "VPCId"
                         ]
                    ]}},
                    "Tags": [
                         {
                              "Key": "Application",
                              "Value": {"Ref": "AWS::StackName"}
                         },
                         {
                              "Key": "Name",
                              "Value": "GreenPrivateUsEast1a"
                         }
                    ]
               }
          },
          "GreenPrivateUsEast1aPrivateRoute": {
               "Type": "AWS::EC2::Route",
               "Properties": {
                    "RouteTableId": {"Ref": "GreenPrivateUsEast1aRouteTable"},
                    "DestinationCidrBlock": "0.0.0.0/0",
                    "NatGatewayId": {"Fn::ImportValue": {"Fn::Join": [
                         "-",
                         [
                              {"Ref": "AWS::Region"},
                              "synapse-dev-vpc-2-public-subnets",
                              "PublicUsEast1aNATGatway"
                         ]
                    ]}}
               }
          },
          "GreenPrivateUsEast1aRouteTableAssociation": {
               "Type": "AWS::EC2::SubnetRouteTableAssociation",
               "Properties": {
                    "SubnetId": {"Ref": "GreenPrivateUsEast1a"},
                    "RouteTableId": {"Ref": "GreenPrivateUsEast1aRouteTable"}
               }
          },
          "GreenPrivateUsEast1aNetworkAclAssociation": {
               "Type": "AWS::EC2::SubnetNetworkAclAssociation",
               "Properties": {
                    "SubnetId": {"Ref": "GreenPrivateUsEast1a"},
                    "NetworkAclId": {"Fn::ImportValue": {"Fn::Join": [
                         "-",
                         [
                              {"Ref": "AWS::Region"},
                              "synapse-dev-vpc-2",
                              "NetworkAclId"
                         ]
                    ]}}
               }
          },
          "GreenPrivateUsEast1b": {
               "Type": "AWS::EC2::Subnet",
               "Properties": {
                    "MapPublicIpOnLaunch": false,
                    "VpcId": {"Fn::ImportValue": {"Fn::Join": [
                         "-",
                         [
                              {"Ref": "AWS::Region"},
                              "synapse-dev-vpc-2",
                              "VPCId"
                         ]
                    ]}},
                    "CidrBlock": "10.24.33.0/24",
                    "AvailabilityZone": "us-east-1b",
                    "Tags": [
                         {
                              "Key": "Application",
                              "Value": {"Ref": "AWS::StackName"}
                         },
                         {
                              "Key": "Name",
                              "Value": "GreenPrivateUsEast1b"
                         }
                    ]
               }
          },
          "GreenPrivateUsEast1bRouteTable": {
               "Type": "AWS::EC2::RouteTable",
               "Properties": {
                    "VpcId": {"Fn::ImportValue": {"Fn::Join": [
                         "-",
                         [
                              {"Ref": "AWS::Region"},
                              "synapse-dev-vpc-2",
                              "VPCId"
                         ]
                    ]}},
                    "Tags": [
                         {
                              "Key": "Application",
                              "Value": {"Ref": "AWS::StackName"}
                         },
                         {
                              "Key": "Name",
                              "Value": "GreenPrivateUsEast1b"
                         }
                    ]
               }
          },
          "GreenPrivateUsEast1bPrivateRoute": {
               "Type": "AWS::EC2::Route",
               "Properties": {
                    "RouteTableId": {"Ref": "GreenPrivateUsEast1bRouteTable"},
                    "DestinationCidrBlock": "0.0.0.0/0",
                    "NatGatewayId": {"Fn::ImportValue": {"Fn::Join": [
                         "-",
                         [
                              {"Ref": "AWS::Region"},
                              "synapse-dev-vpc-2-public-subnets",
                              "PublicUsEast1bNATGatway"
                         ]
                    ]}}
               }
          },
          "GreenPrivateUsEast1bRouteTableAssociation": {
               "Type": "AWS::EC2::SubnetRouteTableAssociation",
               "Properties": {
                    "SubnetId": {"Ref": "GreenPrivateUsEast1b"},
                    "RouteTableId": {"Ref": "GreenPrivateUsEast1bRouteTable"}
               }
          },
          "GreenPrivateUsEast1bNetworkAclAssociation": {
               "Type": "AWS::EC2::SubnetNetworkAclAssociation",
               "Properties": {
                    "SubnetId": {"Ref": "GreenPrivateUsEast1b"},
                    "NetworkAclId": {"Fn::ImportValue": {"Fn::Join": [
                         "-",
                         [
                              {"Ref": "AWS::Region"},
                              "synapse-dev-vpc-2",
                              "NetworkAclId"
                         ]
                    ]}}
               }
          },
          "GreenPrivateUsEast1c": {
               "Type": "AWS::EC2::Subnet",
               "Properties": {
                    "MapPublicIpOnLaunch": false,
                    "VpcId": {"Fn::ImportValue": {"Fn::Join": [
                         "-",
                         [
                              {"Ref": "AWS::Region"},
                              "synapse-dev-vpc-2",
                              "VPCId"
                         ]
                    ]}},
                    "CidrBlock": "10.24.34.0/24",
                    "AvailabilityZone": "us-east-1c",
                    "Tags": [
                         {
                              "Key": "Application",
                              "Value": {"Ref": "AWS::StackName"}
                         },
                         {
                              "Key": "Name",
                              "Value": "GreenPrivateUsEast1c"
                         }
                    ]
               }
          },
          "GreenPrivateUsEast1cRouteTable": {
               "Type": "AWS::EC2::RouteTable",
               "Properties": {
                    "VpcId": {"Fn::ImportValue": {"Fn::Join": [
                         "-",
                         [
                              {"Ref": "AWS::Region"},
                              "synapse-dev-vpc-2",
                              "VPCId"
                         ]
                    ]}},
                    "Tags": [
                         {
                              "Key": "Application",
                              "Value": {"Ref": "AWS::StackName"}
                         },
                         {
                              "Key": "Name",
                              "Value": "GreenPrivateUsEast1c"
                         }
                    ]
               }
          },
          "GreenPrivateUsEast1cPrivateRoute": {
               "Type": "AWS::EC2::Route",
               "Properties": {
                    "RouteTableId": {"Ref": "GreenPrivateUsEast1cRouteTable"},
                    "DestinationCidrBlock": "0.0.0.0/0",
                    "NatGatewayId": {"Fn::ImportValue": {"Fn::Join": [
                         "-",
                         [
                              {"Ref": "AWS::Region"},
                              "synapse-dev-vpc-2-public-subnets",
                              "PublicUsEast1cNATGatway"
                         ]
                    ]}}
               }
          },
          "GreenPrivateUsEast1cRouteTableAssociation": {
               "Type": "AWS::EC2::SubnetRouteTableAssociation",
               "Properties": {
                    "SubnetId": {"Ref": "GreenPrivateUsEast1c"},
                    "RouteTableId": {"Ref": "GreenPrivateUsEast1cRouteTable"}
               }
          },
          "GreenPrivateUsEast1cNetworkAclAssociation": {
               "Type": "AWS::EC2::SubnetNetworkAclAssociation",
               "Properties": {
                    "SubnetId": {"Ref": "GreenPrivateUsEast1c"},
                    "NetworkAclId": {"Fn::ImportValue": {"Fn::Join": [
                         "-",
                         [
                              {"Ref": "AWS::Region"},
                              "synapse-dev-vpc-2",
                              "NetworkAclId"
                         ]
                    ]}}
               }
          },
          "VPCEndpoint": {
               "Type": "AWS::EC2::VPCEndpoint",
               "Properties": {
                    "PolicyDocument": {
                         "Version": "2012-10-17",
                         "Statement": [{
                              "Effect": "Allow",
                              "Principal": "*",
                              "Action": ["*"],
                              "Resource": ["*"]
                         }]
                    },
                    "RouteTableIds": [
                         {"Ref": "GreenPrivateUsEast1aRouteTable"},
                         {"Ref": "GreenPrivateUsEast1bRouteTable"},
                         {"Ref": "GreenPrivateUsEast1cRouteTable"}
                    ],
                    "ServiceName": {"Fn::Join": [
                         "",
                         [
                              "com.amazonaws.",
                              {"Ref": "AWS::Region"},
                              ".s3"
                         ]
                    ]},
                    "VpcId": {"Fn::ImportValue": {"Fn::Join": [
                         "-",
                         [
                              {"Ref": "AWS::Region"},
                              "synapse-dev-vpc-2",
                              "VPCId"
                         ]
                    ]}}
               }
          },
          "VPCEndpointSecurityGroup": {
               "Type": "AWS::EC2::SecurityGroup",
               "Properties": {
                    "GroupDescription": "Allow access from the VPC cidr",
                    "VpcId": {"Fn::ImportValue": {"Fn::Sub": "${AWS::Region}-synapse-dev-vpc-2-VPCId"}},
                    "SecurityGroupIngress": [{
                         "IpProtocol": "tcp",
                         "FromPort": 443,
                         "ToPort": 443,
                         "CidrIp": "10.24.0.0/16"
                    }]
               }
          },
          "OpenSearchVpcEndpoint": {
               "Type": "AWS::OpenSearchServerless::VpcEndpoint",
               "Properties": {
                    "Name": "open-search-vpce",
                    "VpcId": {"Fn::ImportValue": {"Fn::Sub": "${AWS::Region}-synapse-dev-vpc-2-VPCId"}},
                    "SubnetIds": [
                         {"Ref": "GreenPrivateUsEast1a"},
                         {"Ref": "GreenPrivateUsEast1c"}
                    ],
                    "SecurityGroupIds": [{"Ref": "VPCEndpointSecurityGroup"}]
               }
          },
          "bedrockVPCEndpoint": {
               "Type": "AWS::EC2::VPCEndpoint",
               "Properties": {
                    "PolicyDocument": {
                         "Version": "2012-10-17",
                         "Statement": [{
                              "Effect": "Allow",
                              "Principal": "*",
                              "Action": "*",
                              "Resource": "*"
                         }]
                    },
                    "PrivateDnsEnabled": true,
                    "ServiceName": {"Fn::Sub": "com.amazonaws.${AWS::Region}.bedrock"},
                    "SubnetIds": [
                         {"Ref": "GreenPrivateUsEast1a"},
                         {"Ref": "GreenPrivateUsEast1c"}
                    ],
                    "VpcEndpointType": "interface",
                    "VpcId": {"Fn::ImportValue": {"Fn::Sub": "${AWS::Region}-synapse-dev-vpc-2-VPCId"}}
               }
          },
          "bedrockagentVPCEndpoint": {
               "Type": "AWS::EC2::VPCEndpoint",
               "Properties": {
                    "PolicyDocument": {
                         "Version": "2012-10-17",
                         "Statement": [{
                              "Effect": "Allow",
                              "Principal": "*",
                              "Action": "*",
                              "Resource": "*"
                         }]
                    },
                    "PrivateDnsEnabled": true,
                    "ServiceName": {"Fn::Sub": "com.amazonaws.${AWS::Region}.bedrock-agent"},
                    "SubnetIds": [
                         {"Ref": "GreenPrivateUsEast1a"},
                         {"Ref": "GreenPrivateUsEast1c"}
                    ],
                    "VpcEndpointType": "interface",
                    "VpcId": {"Fn::ImportValue": {"Fn::Sub": "${AWS::Region}-synapse-dev-vpc-2-VPCId"}}
               }
          },
          "bedrockruntimeVPCEndpoint": {
               "Type": "AWS::EC2::VPCEndpoint",
               "Properties": {
                    "PolicyDocument": {
                         "Version": "2012-10-17",
                         "Statement": [{
                              "Effect": "Allow",
                              "Principal": "*",
                              "Action": "*",
                              "Resource": "*"
                         }]
                    },
                    "PrivateDnsEnabled": true,
                    "ServiceName": {"Fn::Sub": "com.amazonaws.${AWS::Region}.bedrock-runtime"},
                    "SubnetIds": [
                         {"Ref": "GreenPrivateUsEast1a"},
                         {"Ref": "GreenPrivateUsEast1c"}
                    ],
                    "VpcEndpointType": "interface",
                    "VpcId": {"Fn::ImportValue": {"Fn::Sub": "${AWS::Region}-synapse-dev-vpc-2-VPCId"}}
               }
          },
          "bedrockagentruntimeVPCEndpoint": {
               "Type": "AWS::EC2::VPCEndpoint",
               "Properties": {
                    "PolicyDocument": {
                         "Version": "2012-10-17",
                         "Statement": [{
                              "Effect": "Allow",
                              "Principal": "*",
                              "Action": "*",
                              "Resource": "*"
                         }]
                    },
                    "PrivateDnsEnabled": true,
                    "ServiceName": {"Fn::Sub": "com.amazonaws.${AWS::Region}.bedrock-agent-runtime"},
                    "SubnetIds": [
                         {"Ref": "GreenPrivateUsEast1a"},
                         {"Ref": "GreenPrivateUsEast1c"}
                    ],
                    "VpcEndpointType": "interface",
                    "VpcId": {"Fn::ImportValue": {"Fn::Sub": "${AWS::Region}-synapse-dev-vpc-2-VPCId"}}
               }
          }
     },
     "Outputs": {
          "PrivateSubnets": {
               "Description": "Comma separated list of all private sub-nets",
               "Value": {"Fn::Join": [
                    ", ",
                    [
                         {"Ref": "GreenPrivateUsEast1a"},
                         {"Ref": "GreenPrivateUsEast1b"},
                         {"Ref": "GreenPrivateUsEast1c"}
                    ]
               ]},
               "Export": {"Name": {"Fn::Join": [
                    "-",
                    [
                         {"Ref": "AWS::Region"},
                         {"Ref": "AWS::StackName"},
                         "Private-Subnets"
                    ]
               ]}}
          },
          "PrivateSubnetRouteTableIds": {
               "Description": "Comma separated list of all private sub-net route table IDs",
               "Value": {"Fn::Join": [
                    ", ",
                    [
                         {"Ref": "GreenPrivateUsEast1aRouteTable"},
                         {"Ref": "GreenPrivateUsEast1bRouteTable"},
                         {"Ref": "GreenPrivateUsEast1cRouteTable"}
                    ]
               ]},
               "Export": {"Name": {"Fn::Join": [
                    "-",
                    [
                         {"Ref": "AWS::Region"},
                         {"Ref": "AWS::StackName"},
                         "Private-Subnets-RouteTableIds"
                    ]
               ]}}
          },
          "SubnetGroupCIDR": {
               "Description": "CIDR for this subnetgroup",
               "Value": "10.24.32.0/21",
               "Export": {"Name": {"Fn::Join": [
                    "-",
                    [
                         {"Ref": "AWS::Region"},
                         {"Ref": "AWS::StackName"},
                         "CIDR"
                    ]
               ]}}
          },
          "OpenSearchVpcEndpoint": {
               "Description": "The Id of the VPC endpoint that can be used by to access serverless open search from the VPC.",
               "Value": {"Ref": "OpenSearchVpcEndpoint"},
               "Export": {"Name": {"Fn::Sub": "${AWS::Region}-synapse-dev-vpc-2-open-search-vpce"}}
          },
          "bedrockVPCEndpoint": {
               "Description": "The Id of the VPC endpoint used to access Bedrock from the VPC",
               "Value": {"Ref": "bedrockVPCEndpoint"},
               "Export": {"Name": {"Fn::Sub": "${AWS::Region}-synapse-dev-vpc-2-bedrock-vpce"}}
          },
          "bedrockagentVPCEndpoint": {
               "Description": "The Id of the VPC endpoint used to access Bedrock from the VPC",
               "Value": {"Ref": "bedrockagentVPCEndpoint"},
               "Export": {"Name": {"Fn::Sub": "${AWS::Region}-synapse-dev-vpc-2-bedrockagent-vpce"}}
          },
          "bedrockruntimeVPCEndpoint": {
               "Description": "The Id of the VPC endpoint used to access Bedrock from the VPC",
               "Value": {"Ref": "bedrockruntimeVPCEndpoint"},
               "Export": {"Name": {"Fn::Sub": "${AWS::Region}-synapse-dev-vpc-2-bedrockruntime-vpce"}}
          },
          "bedrockagentruntimeVPCEndpoint": {
               "Description": "The Id of the VPC endpoint used to access Bedrock from the VPC",
               "Value": {"Ref": "bedrockagentruntimeVPCEndpoint"},
               "Export": {"Name": {"Fn::Sub": "${AWS::Region}-synapse-dev-vpc-2-bedrockagentruntime-vpce"}}
          }
     }
}
