src/test/resources/vpc/private-subnet-red-test.json
{
     "AWSTemplateFormatVersion": "2010-09-09",
     "Description": "Creates one public subnet per availability zone.",
     "Resources": {
          "RedPrivateUsEast1a": {
               "Type": "AWS::EC2::Subnet",
               "Properties": {
                    "MapPublicIpOnLaunch": false,
                    "VpcId": {"Fn::ImportValue": {"Fn::Join": [
                         "-",
                         [
                              {"Ref": "AWS::Region"},
                              "synapse-dev-vpc-2",
                              "VPCId"
                         ]
                    ]}},
                    "CidrBlock": "10.24.24.0/24",
                    "AvailabilityZone": "us-east-1a",
                    "Tags": [
                         {
                              "Key": "Application",
                              "Value": {"Ref": "AWS::StackName"}
                         },
                         {
                              "Key": "Name",
                              "Value": "RedPrivateUsEast1a"
                         }
                    ]
               }
          },
          "RedPrivateUsEast1aRouteTable": {
               "Type": "AWS::EC2::RouteTable",
               "Properties": {
                    "VpcId": {"Fn::ImportValue": {"Fn::Join": [
                         "-",
                         [
                              {"Ref": "AWS::Region"},
                              "synapse-dev-vpc-2",
                              "VPCId"
                         ]
                    ]}},
                    "Tags": [
                         {
                              "Key": "Application",
                              "Value": {"Ref": "AWS::StackName"}
                         },
                         {
                              "Key": "Name",
                              "Value": "RedPrivateUsEast1a"
                         }
                    ]
               }
          },
          "RedPrivateUsEast1aPrivateRoute": {
               "Type": "AWS::EC2::Route",
               "Properties": {
                    "RouteTableId": {"Ref": "RedPrivateUsEast1aRouteTable"},
                    "DestinationCidrBlock": "0.0.0.0/0",
                    "NatGatewayId": {"Fn::ImportValue": {"Fn::Join": [
                         "-",
                         [
                              {"Ref": "AWS::Region"},
                              "synapse-dev-vpc-2-public-subnets",
                              "PublicUsEast1aNATGatway"
                         ]
                    ]}}
               }
          },
          "RedPrivateUsEast1aRouteTableAssociation": {
               "Type": "AWS::EC2::SubnetRouteTableAssociation",
               "Properties": {
                    "SubnetId": {"Ref": "RedPrivateUsEast1a"},
                    "RouteTableId": {"Ref": "RedPrivateUsEast1aRouteTable"}
               }
          },
          "RedPrivateUsEast1aNetworkAclAssociation": {
               "Type": "AWS::EC2::SubnetNetworkAclAssociation",
               "Properties": {
                    "SubnetId": {"Ref": "RedPrivateUsEast1a"},
                    "NetworkAclId": {"Fn::ImportValue": {"Fn::Join": [
                         "-",
                         [
                              {"Ref": "AWS::Region"},
                              "synapse-dev-vpc-2",
                              "NetworkAclId"
                         ]
                    ]}}
               }
          },
          "RedPrivateUsEast1b": {
               "Type": "AWS::EC2::Subnet",
               "Properties": {
                    "MapPublicIpOnLaunch": false,
                    "VpcId": {"Fn::ImportValue": {"Fn::Join": [
                         "-",
                         [
                              {"Ref": "AWS::Region"},
                              "synapse-dev-vpc-2",
                              "VPCId"
                         ]
                    ]}},
                    "CidrBlock": "10.24.25.0/24",
                    "AvailabilityZone": "us-east-1b",
                    "Tags": [
                         {
                              "Key": "Application",
                              "Value": {"Ref": "AWS::StackName"}
                         },
                         {
                              "Key": "Name",
                              "Value": "RedPrivateUsEast1b"
                         }
                    ]
               }
          },
          "RedPrivateUsEast1bRouteTable": {
               "Type": "AWS::EC2::RouteTable",
               "Properties": {
                    "VpcId": {"Fn::ImportValue": {"Fn::Join": [
                         "-",
                         [
                              {"Ref": "AWS::Region"},
                              "synapse-dev-vpc-2",
                              "VPCId"
                         ]
                    ]}},
                    "Tags": [
                         {
                              "Key": "Application",
                              "Value": {"Ref": "AWS::StackName"}
                         },
                         {
                              "Key": "Name",
                              "Value": "RedPrivateUsEast1b"
                         }
                    ]
               }
          },
          "RedPrivateUsEast1bPrivateRoute": {
               "Type": "AWS::EC2::Route",
               "Properties": {
                    "RouteTableId": {"Ref": "RedPrivateUsEast1bRouteTable"},
                    "DestinationCidrBlock": "0.0.0.0/0",
                    "NatGatewayId": {"Fn::ImportValue": {"Fn::Join": [
                         "-",
                         [
                              {"Ref": "AWS::Region"},
                              "synapse-dev-vpc-2-public-subnets",
                              "PublicUsEast1bNATGatway"
                         ]
                    ]}}
               }
          },
          "RedPrivateUsEast1bRouteTableAssociation": {
               "Type": "AWS::EC2::SubnetRouteTableAssociation",
               "Properties": {
                    "SubnetId": {"Ref": "RedPrivateUsEast1b"},
                    "RouteTableId": {"Ref": "RedPrivateUsEast1bRouteTable"}
               }
          },
          "RedPrivateUsEast1bNetworkAclAssociation": {
               "Type": "AWS::EC2::SubnetNetworkAclAssociation",
               "Properties": {
                    "SubnetId": {"Ref": "RedPrivateUsEast1b"},
                    "NetworkAclId": {"Fn::ImportValue": {"Fn::Join": [
                         "-",
                         [
                              {"Ref": "AWS::Region"},
                              "synapse-dev-vpc-2",
                              "NetworkAclId"
                         ]
                    ]}}
               }
          },
          "RedPrivateUsEast1c": {
               "Type": "AWS::EC2::Subnet",
               "Properties": {
                    "MapPublicIpOnLaunch": false,
                    "VpcId": {"Fn::ImportValue": {"Fn::Join": [
                         "-",
                         [
                              {"Ref": "AWS::Region"},
                              "synapse-dev-vpc-2",
                              "VPCId"
                         ]
                    ]}},
                    "CidrBlock": "10.24.26.0/24",
                    "AvailabilityZone": "us-east-1c",
                    "Tags": [
                         {
                              "Key": "Application",
                              "Value": {"Ref": "AWS::StackName"}
                         },
                         {
                              "Key": "Name",
                              "Value": "RedPrivateUsEast1c"
                         }
                    ]
               }
          },
          "RedPrivateUsEast1cRouteTable": {
               "Type": "AWS::EC2::RouteTable",
               "Properties": {
                    "VpcId": {"Fn::ImportValue": {"Fn::Join": [
                         "-",
                         [
                              {"Ref": "AWS::Region"},
                              "synapse-dev-vpc-2",
                              "VPCId"
                         ]
                    ]}},
                    "Tags": [
                         {
                              "Key": "Application",
                              "Value": {"Ref": "AWS::StackName"}
                         },
                         {
                              "Key": "Name",
                              "Value": "RedPrivateUsEast1c"
                         }
                    ]
               }
          },
          "RedPrivateUsEast1cPrivateRoute": {
               "Type": "AWS::EC2::Route",
               "Properties": {
                    "RouteTableId": {"Ref": "RedPrivateUsEast1cRouteTable"},
                    "DestinationCidrBlock": "0.0.0.0/0",
                    "NatGatewayId": {"Fn::ImportValue": {"Fn::Join": [
                         "-",
                         [
                              {"Ref": "AWS::Region"},
                              "synapse-dev-vpc-2-public-subnets",
                              "PublicUsEast1cNATGatway"
                         ]
                    ]}}
               }
          },
          "RedPrivateUsEast1cRouteTableAssociation": {
               "Type": "AWS::EC2::SubnetRouteTableAssociation",
               "Properties": {
                    "SubnetId": {"Ref": "RedPrivateUsEast1c"},
                    "RouteTableId": {"Ref": "RedPrivateUsEast1cRouteTable"}
               }
          },
          "RedPrivateUsEast1cNetworkAclAssociation": {
               "Type": "AWS::EC2::SubnetNetworkAclAssociation",
               "Properties": {
                    "SubnetId": {"Ref": "RedPrivateUsEast1c"},
                    "NetworkAclId": {"Fn::ImportValue": {"Fn::Join": [
                         "-",
                         [
                              {"Ref": "AWS::Region"},
                              "synapse-dev-vpc-2",
                              "NetworkAclId"
                         ]
                    ]}}
               }
          },
          "VPCEndpoint": {
               "Type": "AWS::EC2::VPCEndpoint",
               "Properties": {
                    "PolicyDocument": {
                         "Version": "2012-10-17",
                         "Statement": [{
                              "Effect": "Allow",
                              "Principal": "*",
                              "Action": ["*"],
                              "Resource": ["*"],
							  "Condition": {"StringEquals": {"aws:PrincipalAccount": [{"Ref": "AWS::AccountId"}, "050451359079"]}}
                         }]
                    },
                    "RouteTableIds": [
                         {"Ref": "RedPrivateUsEast1aRouteTable"},
                         {"Ref": "RedPrivateUsEast1bRouteTable"},
                         {"Ref": "RedPrivateUsEast1cRouteTable"}
                    ],
                    "ServiceName": {"Fn::Join": [
                         "",
                         [
                              "com.amazonaws.",
                              {"Ref": "AWS::Region"},
                              ".s3"
                         ]
                    ]},
                    "VpcId": {"Fn::ImportValue": {"Fn::Join": [
                         "-",
                         [
                              {"Ref": "AWS::Region"},
                              "synapse-dev-vpc-2",
                              "VPCId"
                         ]
                    ]}}
               }
          }
     },
     "Outputs": {
          "PrivateSubnets": {
               "Description": "Comma separated list of all private sub-nets",
               "Value": {"Fn::Join": [
                    ", ",
                    [
                         {"Ref": "RedPrivateUsEast1a"},
                         {"Ref": "RedPrivateUsEast1b"},
                         {"Ref": "RedPrivateUsEast1c"}
                    ]
               ]},
               "Export": {"Name": {"Fn::Join": [
                    "-",
                    [
                         {"Ref": "AWS::Region"},
                         {"Ref": "AWS::StackName"},
                         "Private-Subnets"
                    ]
               ]}}
          },
          "PrivateSubnetRouteTableIds": {
               "Description": "Comma separated list of all private sub-net route table IDs",
               "Value": {"Fn::Join": [
                    ", ",
                    [
                         {"Ref": "RedPrivateUsEast1aRouteTable"},
                         {"Ref": "RedPrivateUsEast1bRouteTable"},
                         {"Ref": "RedPrivateUsEast1cRouteTable"}
                    ]
               ]},
               "Export": {"Name": {"Fn::Join": [
                    "-",
                    [
                         {"Ref": "AWS::Region"},
                         {"Ref": "AWS::StackName"},
                         "Private-Subnets-RouteTableIds"
                    ]
               ]}}
          },
          "SubnetGroupCIDR": {
               "Description": "CIDR for this subnetgroup",
               "Value": "10.24.24.0/21",
               "Export": {"Name": {"Fn::Join": [
                    "-",
                    [
                         {"Ref": "AWS::Region"},
                         {"Ref": "AWS::StackName"},
                         "CIDR"
                    ]
               ]}}
          }
     }
}
